<resources>
    <string name="app_name">TaskApp</string>
    <!--    Status Task-->

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- Generic -->
    <string name="text_button_warning">ENTENDI</string>
    <string name="text_title_warning">ATENÇÃO</string>
    <string name="email_empty">Preencha seu e-mail.</string>
    <string name="password_empty">Preencha sua senha.</string>
    <string name="label_email">E-mail</string>
    <string name="label_password">Senha</string>
    <string name="label_confirm_password">Confirme sua senha</string>

    <!-- Input Placeholder Generic -->
    <string name="placeholder_email">Digite seu email</string>
    <string name="placeholder_password">Digite sua senha</string>
    <string name="placeholder_confirm_password">Digite sua senha novamente</string>

    <!-- Register Fragment -->
    <string name="email_empty_register_fragment">Preencha seu e-mail.</string>
    <string name="password_empty_register_fragment">Preencha sua senha.</string>
    <string name="confirm_password_empty_register_fragment">Preencha sua confirmação de senha.</string>
    <string name="confirmation_password_does_not_match_register_fragment">As senhas não conferem.</string>

    <!-- FormTask Fragment -->
    <string name="description_formtask">Preencha sua descrição</string>

</resources>